@@ -3360,7 +3360,7 @@ static int route_dst_generic(const struct sockaddr_storage *dst,
     /* But the source address we want to use is the target address. */
     if (!spoofss) {
       if (get_srcaddr(dst, &rnfo->srcaddr) == -1)
-        rnfo->srcaddr = ifaces[i].addr;
+        rnfo->srcaddr = rnfo->ii.addr;
     }
 
     return 1;
@@ -3385,7 +3385,7 @@ static int route_dst_generic(const struct sockaddr_storage *dst,
       sockaddr_equal(&routes[i].gw, dst));
     if (!spoofss) {
       if (get_srcaddr(dst, &rnfo->srcaddr) == -1)
-        rnfo->srcaddr = ifaces[i].addr;
+        rnfo->srcaddr = rnfo->ii.addr;
     }
     rnfo->nexthop = routes[i].gw;
 
@@ -3403,7 +3403,7 @@ static int route_dst_generic(const struct sockaddr_storage *dst,
     rnfo->direct_connect = 1;
     if (!spoofss) {
       if (get_srcaddr(dst, &rnfo->srcaddr) == -1)
-        rnfo->srcaddr = ifaces[i].addr;
+        rnfo->srcaddr = rnfo->ii.addr;
     }
 
     return 1;
